--- a/AnytimeFileShare/AndroidManifest.xml
+++ b/AnytimeFileShare/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >        
         <activity
-            android:name="com.hq.anytimefileshare.RemoteListActivity"
+            android:name="com.hq.anytimefileshare.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
